fix spacing

--- a/assets/scss/_custom_team.scss
+++ b/assets/scss/_custom_team.scss
@@ -113,6 +113,12 @@
           color: #3176d9;
         }
       }
+
+      .item-text {
+        display: flex;
+        gap: 0.75rem;
+        align-items: center;
+      }
     }
 
   }
@@ -148,12 +154,12 @@
 
       .modal-name-box {
         display: flex;
+        gap: 0.5rem;
         align-items: center;
-        height: 90px;
+        margin-top: 2rem;
+        margin-bottom: 2rem;
 
         .modal-icon {
-          margin: 6px 4px 0 -3px;
-
           &:hover {
             cursor: default;
           }
